--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@neos21/neos-normalize",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Neo's Normalize",
-  "main": "neos-normalize.css",
+  "main": "neos-normalize.min.css",
   "style": "neos-normalize.css",
   "sass": "neos-normalize.scss",
   "scripts": {
