--- a/.github/workflows/publish-to-gpr.yaml
+++ b/.github/workflows/publish-to-gpr.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Install
         run : npm install
       - name: Build To dist/ Directory
-        run : npm run build
+        run : npm run transpile && npm run minify
       - name: Publish
         run : npm publish
         env :
