--- a/.github/workflows/publish-to-gpr.yaml
+++ b/.github/workflows/publish-to-gpr.yaml
@@ -27,8 +27,8 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install
         run : npm install
-      - name: Build To dist/ Directory
-        run : npm run transpile && npm run minify
+      - name: Build
+        run : npm run build
       - name: Publish
         run : npm publish
         env :
